# Preffered Toolchain: Rust v1.57.0-nightly+
cargo-features = ["strip"]

[package]
name = "lpm"
version = "0.1.0"
description = "A package manager for the Lite-XL code editor"
authors = ["Debarchito Nath <dev.debarchito.nath@protonmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["lite-xl", "lpm"]
categories = ["package-manager"]
edition = "2021"

[dependencies]
anyhow = "1.0.44"
dirs = "4.0.0"
reqwest = { version = "0.11.5", features = ["blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
structopt = "0.3.23"
termcolor = "1.1.2"
tokio = { version = "1.12.0", features = ["full"] }
toml = "0.5.8"

[target.'cfg(windows)'.dependencies]
junction = "0.2.0"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.37", features = ["vendored"] }
# This requires a C compiler, perl and make

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
